# pandas-aws

./: .coveragerc  .gitignore  .travis.yml  README.md  deploy.sh  pyproject.toml  pytest.ini
.github/workflows/: greetings.yml
aws_pocket/: __init__.py
pandas_aws/: __init__.py  redshift.py  s3.py
tests/: __init__.py  test_aws_pocket.py  test_redshift.py  test_s3.py
