[tool.poetry]
name = "pandas-aws"
version = "0.1.6"
description = ""
authors = ["FlorentPajot <pro.florent.pajot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FlorentPajot/pandas-aws"
repository = "https://github.com/FlorentPajot/pandas-aws"
keywords = ["pandas", "aws", "python", "dataengineering"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]
include = [
    "README.md",
    "LICENSE"
]
exclude = ["dist/*", "coverage.xml", "tests/*"]


[tool.poetry.dependencies]
python = ">=3.6.1,<3.9.0"
boto3 = "^1.12.26"
pandas = ">=0.23.3,<2.0.0"
fastparquet = ">=0.3.3,<0.5.0"
pyarrow = "^0.16.0"
xlsxwriter = "^1.2.8"
xlrd = "^1.2.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
mock = "=4.0.2"
moto = "=1.3.14"
nose = "^1.3.7"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
